# web_yew

./: .gitignore  Cargo.toml  README.md  index.html  trunk.toml
src/: app.rs  main.rs  router.rs
src/components/: banner_18.rs  box_scroll.rs  dropdowns.rs  header.rs  image_scroll.rs  main_menu.rs  mod.rs  video.rs
src/pages/: about_page.rs  home_page.rs
