[package]
name = "web_yew"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
console_log = { version = "1.0.0", features = ["color"] }
yew = { version = "0.21", features = ["csr"] }
stylist = { version = "0.13", features = ["yew_integration", "parser"] }
yew-router = "0.18.0"
gloo-timers = "0.3.0"
web-sys = { version = "0.3.69", features = ["Window", "Document", "Element", "DomRect", "HtmlVideoElement", "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit"] }
wasm-bindgen = "0.2.92"
js-sys = "0.3"


[dev-dependencies]
gloo-utils = "0.2.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-test = "0.3.33"
